pkl/tests/invalid/duplicateGoName.pkl
amends "../../TaskSpans.pkl"

traceID = "11111111111111111111111111111111"

spans {
  new TaskSpan {
    goName = "SameName"
    name = "first"
    uuid = "11111111-1111-4111-8111-111111111111"
    traceID = "11111111111111111111111111111111"
    spanID = "1111111111111111"
  }
  new TaskSpan {
    goName = "SameName"
    name = "second"
    uuid = "22222222-2222-4222-8222-222222222222"
    traceID = "11111111111111111111111111111111"
    spanID = "2222222222222222"
  }
}
